# turerp-rust

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  ENTERPRISE_GAP_ANALYSIS.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  REVIEW.md  RUNBOOK.md  docker-compose.yml  lefthook.yml  openapi.json
turerp/: .gitignore  Caddyfile  Cargo.toml  Dockerfile  LOCALIZATION_PLAN.md  README.md  audit.toml  docker-compose.https.yml  docker-compose.yml  fix_crm.py  fix_manufacturing.py  fix_tests.py  openapi.json
turerp/.cargo/: audit.toml  config.toml
turerp/.github/workflows/: ci.yml
turerp/.sqlx/: query-00a3e475b0fc5bb6e745aad8211dbe75942c8b9581e7f2a48c99b8979349da13.json  query-08c29656f4039ec44b00ecd45e120dc99df82ed87dfd6b0ddb3013489a538098.json  query-154fc5f2704e3c73b071c94e1cdf57d062052e9190c91f82cb45cfe6e667d639.json  query-2b0f0d7cde4a67d822d50e2db57f622ff776432d798e81343f2f2f4bce8a5f08.json  query-35d20d672c49d364be547e75c43f5d3f724928475aea75578068bcf04c23b4e7.json  query-39569eefb58af3b7bca3fed9f0ad7076864544a857dd7a0e67f2b3c425410136.json  query-463f95817b552197c1f54750412c0829bdafcf1480ee09a7a19994e02a14eb3b.json  query-474d4ac6c5015e02eddacd4a17ba02dc8d3afaea9c754448d1ba3dff9c2ca372.json  query-5083760b4ab2254dfb2f7232dc3b8dea619db50879efa2d516d6e7eb06e76a21.json  query-591056a8b2f14bce4d3043d02642bd589997004914ceb44dcbf0909427a75cbe.json  query-5adce13dd19e07ed90248b38eeb0d29c1aa6d175d4a1696de9bb826087ff046a.json  query-6156d4241c39ba170f56bdd6c7931a98f25d2910be7b5c645b5039c3fe09567c.json  query-65b5ada7ebc1e95745449794f58eb74165908bd85d9229b70f952e3f28e26fe9.json  query-68003f44bcc513549441bb25adb5204b9ca1a1941ac2b30a34b46c900abdd1e2.json  query-72d71e4e417d5964c1d190f8f16f486e40bcedc20e36c6bff254ecbccf705d51.json  query-844cd230c4b33554b0cdaebdac370afda45558d6e18a2eb7edf3a270913aa21f.json  query-8a2cc0d8bec82fc7c5d3400ae18558c5571860c60d8b009b25335e6b55ae8dc8.json  query-9a655bfcebf4a91d6de16b9bb78f0fd6dd2d3de4fa82c5279112307a815bc090.json  query-ac55f7ea1182077408ecb7c27caaa5746922778510c3d8479296f1540b5d74cd.json  query-afae0fff87e4f3ecfd6a8f7fb1597246d7403e7b90bf63e3653edbd25d371ba6.json  query-b2e4851cf999e9f5816bd11d0bb01b127674ac0a40fe5e568449f5991c972895.json  query-ba1c74bd8ce827e769f20b9aa48839ad6a2ea22b618f34b2e69d570a2ba79d93.json  query-bd015689cbdb1b4b51f0c6c220aabfd6e0b72d84cc097efdf45b17d506ad68ff.json  query-ebacb252559304ead2e1e7ebe77a42f5879f1607d805bbdc58459fae94cb5236.json  query-ee8127879b9021e4ffbdcbfb18a638ce9abb4118259b75c1bffc3a080cb153ac.json  query-f8dabce93b2974f14f26d2f129a45e5030196f27917992885ebe92beadaa2e64.json
turerp/agents/: architect.yaml  coder.yaml  reviewer.md  reviewer.yaml  security-architect.yaml  tester.yaml
turerp/docs/: HTTPS_SETUP.md
turerp/locales/: en.json  tr.json
turerp/migrations/: 001_initial_schema.sql  002_add_tenant_db_name.sql  003_business_modules.sql  004_composite_indexes.sql  005_audit_logs.sql  006_settings.sql  007_soft_delete.sql  008_custom_fields.sql  009_chart_of_accounts.sql  010_edefter.sql  010_webhooks.sql  011_tax_engine.sql  013_efatura.sql  014_api_keys.sql  015_currency.sql  015_mfa.sql  016_full_text_search.sql  017_notifications.sql  018_jobs.sql  019_soft_delete_users_tenants.sql  020_soft_delete_complete.sql  021_files_table.sql  021_outbox.sql  022_cdc_triggers.sql  023_companies.sql  023_cost_centers.sql  024_workflows.sql  025_bank_integration.sql  026_subscriptions.sql  027_observability.sql  028_missing_repos.sql  029_brute_force_protection.sql  030_ldap_configs.sql  031_sgk_tables.sql  032_blockchain_tables.sql  033_stock_movements_tenant_id.sql  034_inter_company_and_revoked_tokens.sql  035_core_tables.sql  036_flag_seed_defaults.sql  037_pg_audit_dlq.sql  (+21 more)
turerp/migrations/down/: 001_initial_schema.down.sql  002_add_tenant_db_name.down.sql  003_business_modules.down.sql  004_composite_indexes.down.sql  005_audit_logs.down.sql  006_settings.down.sql  007_soft_delete.down.sql  008_custom_fields.down.sql  009_chart_of_accounts.down.sql  010_webhooks.down.sql  011_edefter.down.sql  012_tax_engine.down.sql  013_efatura.down.sql  014_api_keys.down.sql  015_currency.down.sql  015_mfa.down.sql  016_full_text_search.down.sql  017_notifications.down.sql  018_jobs.down.sql  019_soft_delete_users_tenants.down.sql  020_soft_delete_complete.down.sql  021_files_table.down.sql  021_outbox.down.sql  022_cdc_triggers.down.sql  023_companies.down.sql  023_cost_centers.down.sql  024_workflows.down.sql  025_bank_integration.down.sql  026_subscriptions.down.sql  027_observability.down.sql  031_sgk_tables.down.sql  (+30 more)
turerp/scripts/: README.md  add_company_id.py  backup_pg.cron  backup_pg.sh  cargo-clean-build.sh  cargo-clean-test.sh  check_hurl_coverage.sh  comprehensive_fix.py  fix_all_company_id.py  fix_all_models.py  fix_company_id.py  fix_models_company_id.py  fix_pg_repo_signatures.py  fix_row_structs.py  review.sh  seed_sample_data.sql  seed_test_admin.sql  vault-init.sh
turerp/src/: config.rs  error.rs  lib.rs  macros.rs  main.rs  state.rs
turerp/tests/: accounting_crud_test.rs  api_integration_test.rs  api_key_crud_test.rs  archive_crud_test.rs  assets_crud_test.rs  audit_crud_test.rs  audit_dlq_test.rs  audit_tiered_backpressure_test.rs  audit_unauth_path_test.rs  audit_writer_panic_recovery_test.rs  bank_account_test.rs  bank_integration_test.rs  bank_reconciliation_test.rs  bank_transaction_test.rs  barcode_crud_test.rs  cari_crud_test.rs  chart_of_accounts_crud_test.rs  company_crud_test.rs  config_validation_test.rs  cors_env_loading_test.rs  cost_center_allocation_test.rs  cost_center_crud_test.rs  cost_center_integration_test.rs  crm_crud_test.rs  cross_tenant_register_test.rs  currency_crud_test.rs  custom_field_crud_test.rs  customer_portal_test.rs  dashboard_integration_test.rs  db_pool_max_conns_env_test.rs  document_crud_test.rs  e2e_assets_project_bank_test.rs  e2e_crm_test.rs  e2e_hr_shift_test.rs  e2e_infra_test.rs  e2e_manufacturing_test.rs  e2e_pos_test.rs  e2e_products_tax_currency_test.rs  e2e_tenant_users_test.rs  e2e_turkish_portals_test.rs  (+56 more)
(+622 files in other folders)
