[package]
name = "turerp"
version = "0.1.0"
edition = "2021"
authors = ["Turerp Team"]
description = "Multi-tenant SaaS ERP system"
license = "AGPL-3.0"
repository = "https://github.com/ilkerhalil/turerp-rust"

[lib]
name = "turerp"
path = "src/lib.rs"

[dependencies]
# Web framework - use latest version
actix-web = "4"
actix-rt = "2"
actix-cors = "0.7"

# Database - use sqlx directly
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "macros", "chrono", "rust_decimal"] }

# Authentication
jsonwebtoken = "9"
bcrypt = "0.15"

# Hashing (API key hashing + HMAC)
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

# TOTP / MFA
totp-rs = { version = "5", features = ["qr"] }
base32 = "0.5"

# HTTP client (webhook delivery)
reqwest = { version = "0.12", features = ["json"] }

# Encryption
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Validation
validator = { version = "0.20", features = ["derive"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Redis caching
redis = { version = "0.27", features = ["tokio-comp"] }

# Rate limiting
governor = "0.8"
nonzero_ext = "0.3"

# Validation
regex = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Synchronization (no poisoning)
parking_lot = "0.12"

# Secure memory zeroing
zeroize = "1.8"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Precise decimal for financial calculations
rust_decimal = { version = "1.36", features = ["serde"] }
rust_decimal_macros = "1.36"

# Report generation
rust_xlsxwriter = "0.94"
printpdf = "0.3"
csv = "1.4"

# Mocking for tests
mockall = "0.12"

# OpenAPI / Swagger
utoipa = "4"
utoipa-swagger-ui = { version = "6", features = ["actix-web"] }

[[bin]]
name = "gen_openapi"
path = "src/bin/gen_openapi.rs"

[features]
default = []
postgres = ["sqlx/runtime-tokio-native-tls"]

[profile.release]
lto = true
codegen-units = 1
strip = true