[package]
name = "turerp"
version = "0.1.0"
edition = "2021"
authors = ["Turerp Team"]
description = "Multi-tenant SaaS ERP system"
license = "AGPL-3.0"
repository = "https://github.com/ilkerhalil/turerp-rust"
# All integration tests live in `tests/*.rs` and are aggregated into a single
# binary (`tests/integration.rs`) via submodules. Disabling auto-discovery
# avoids building ~80 separate test binaries, each of which re-linked the heavy
# dependency tree (actix/sqlx/azure/otel) and dominated total compile time.
autotests = false

[lib]
name = "turerp"
path = "src/lib.rs"

# The sole integration test target: every `tests/*.rs` file is declared as a
# submodule of `tests/integration.rs`, so the whole suite links exactly once.
[[test]]
name = "integration"
path = "tests/integration.rs"

[dependencies]
# Web framework - use latest version
actix-web = "4"
actix-cors = "0.7"

# Database - use sqlx directly
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "macros", "chrono", "rust_decimal"] }

# Authentication
jsonwebtoken = "9"
bcrypt = "0.15"

# Hashing (API key hashing + HMAC)
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

# TOTP / MFA
totp-rs = { version = "5", features = ["qr"] }
base32 = "0.5"

# HTTP client (webhook delivery)
reqwest = { version = "0.12", features = ["json"] }
url = "2"

# Encryption
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Validation
validator = { version = "0.20", features = ["derive"] }

# Configuration
config = "0.14"

# Error handling
thiserror = "1.0"

# Async
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
num_cpus = "1"

# Secrets management (HashiCorp Vault)
vaultrs = "0.7"

# Redis caching
redis = { version = "0.27", features = ["tokio-comp"] }

# In-memory caching (TTL + eviction)
moka = { version = "0.12", features = ["future"] }

# Rate limiting
governor = "0.8"
nonzero_ext = "0.3"

# Cron expressions for job scheduling
cron = "0.15"

# Validation
regex = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Synchronization (no poisoning)
parking_lot = "0.12"

# Secure memory zeroing
zeroize = "1.8"

# Secret management (prevent accidental logging of credentials)
secrecy = "0.10"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# OpenTelemetry for Aspire Dashboard
opentelemetry = "0.28"
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.28", features = ["trace", "metrics", "logs", "grpc-tonic"] }
opentelemetry-semantic-conventions = "0.28"
tracing-opentelemetry = "0.29"
opentelemetry-appender-tracing = "0.28"

# Precise decimal for financial calculations
rust_decimal = { version = "1.36", features = ["serde"] }
rust_decimal_macros = "1.36"
num-traits = "0.2"

# S3 / File storage
rust-s3 = { version = "0.37", features = ["tokio"] }

# Multipart form data (file uploads)
actix-multipart = "0.7"

# Report generation
rust_xlsxwriter = "0.94"
printpdf = "0.12"
csv = "1.4"

# Email delivery
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"] }

# Template engine
handlebars = "6.0"

# XML parsing (CAMT.053 / ISO 20022)
quick-xml = { version = "0.41", features = ["serialize"] }

# Barcode / QR code generation
barcodes = { version = "0.2", features = ["image"] }
qrcode = "0.14"
image = "0.25"

# GraphQL
async-graphql = { version = "7", features = ["chrono", "decimal"] }
async-graphql-actix-web = "7"

# IP whitelisting
ipnetwork = "0.20"

# LDAP / Active Directory
ldap3 = "0.11"

# OpenAPI / Swagger
utoipa = "4"
utoipa-swagger-ui = { version = "6", features = ["actix-web"] }

# cargo-machete false-positive: rust-s3 is imported as `s3` (use s3::{...} in
# src/common/s3_storage.rs), so machete's textual scan can't see the usage.
[package.metadata.cargo-machete]
ignored = ["rust-s3"]

[dev-dependencies]
# Production-readiness tests use std::fs to walk the repo tree; no extra deps needed.

[[bin]]
name = "gen_openapi"
path = "src/bin/gen_openapi.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev]
# Keep line-level backtraces for panic locations, but drop full variable
# debug info. Much smaller test binaries and rlibs than the default
# (full debug), and avoids the split-debuginfo=unpacked .dwo explosion that
# accumulated 46k+ orphan files / ~7 GB under target/ in the past.
debug = "line-tables-only"
# Disable incremental compilation. Even with line-tables-only debug info, this
# project's dependency tree compiles to a very large debug target/ (azul,
# rav1e, image, aws-lc-rs, lopdf, opentelemetry, ...), and the incremental
# cache was a large share of it — enough to fill a 99 GB /data volume together
# with docker + other projects, causing ENOSPC link failures. CI already sets
# CARGO_INCREMENTAL=0 (one-shot builds); this makes local dev consistent and
# keeps target/ bounded. Trade-off: iterative rebuilds recompile changed
# crates + dependents from scratch (cargo-sweep still prunes stale artifacts).
incremental = false

[profile.dev.build-override]
# Build scripts and proc-macros never need debug info; skip it entirely.
debug = false
